--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:text="@string/number_label"
         android:textSize="35sp"
         android:textStyle="bold"
-        android:textColor="#716b72"
+        android:textColor="@color/gray_custom"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -53,7 +53,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="40dp"
             android:textAllCaps="false"
-            android:backgroundTint="#6002ee"
+            android:backgroundTint="@color/teal_custom"
             android:text="@string/sumar"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -64,7 +64,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="12dp"
             android:textAllCaps="false"
-            android:backgroundTint="#6002ee"
+            android:backgroundTint="@color/teal_custom"
             android:text="@string/zoom_plus"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -76,7 +76,7 @@
             android:layout_marginTop="12dp"
             android:text="@string/ocultar"
             android:textAllCaps="false"
-            android:backgroundTint="#6002ee"
+            android:backgroundTint="@color/teal_custom"
             android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
@@ -101,7 +101,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="40dp"
             android:textAllCaps="false"
-            android:backgroundTint="#6002ee"
+            android:backgroundTint="@color/teal_custom"
             android:text="@string/restar"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -112,7 +112,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="12dp"
             android:textAllCaps="false"
-            android:backgroundTint="#6002ee"
+            android:backgroundTint="@color/teal_custom"
             android:text="@string/zoom"
             android:textSize="20sp"
             android:textStyle="bold" />
@@ -123,7 +123,7 @@
             android:layout_height="60dp"
             android:layout_marginTop="12dp"
             android:textAllCaps="false"
-            android:backgroundTint="#6002ee"
+            android:backgroundTint="@color/teal_custom"
             android:text="@string/reset"
             android:textSize="20sp"
             android:textStyle="bold" />
