--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView"
         android:layout_width="184dp"
         android:layout_height="100dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:contentDescription="@string/todo"
         android:src="@drawable/imagetest"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,10 +20,10 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/number"
+        android:id="@+id/txvMainActivityNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:text="@string/number_label"
         android:textSize="35sp"
         android:textStyle="bold"
@@ -37,21 +37,20 @@
         android:id="@+id/button_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="38dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.23"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/number"
+        app:layout_constraintTop_toTopOf="@id/txvMainActivityNumber"
         app:layout_constraintVertical_bias="0.3">
 
         <Button
-            android:id="@+id/sumar"
+            android:id="@+id/btnMainActivityAdd"
             android:layout_width="120dp"
             android:layout_height="60dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="6dp"
             android:textAllCaps="false"
             android:backgroundTint="@color/teal_custom"
             android:text="@string/sumar"
@@ -59,10 +58,10 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/zoom"
+            android:id="@+id/btnMainActivityZoom"
             android:layout_width="120dp"
             android:layout_height="60dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="6dp"
             android:textAllCaps="false"
             android:backgroundTint="@color/teal_custom"
             android:text="@string/zoom_plus"
@@ -70,10 +69,10 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/ocultar"
+            android:id="@+id/btnMainActivityHidden"
             android:layout_width="120dp"
             android:layout_height="60dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="6dp"
             android:backgroundTint="@color/teal_custom"
             android:text="@string/ocultar"
             android:textAllCaps="false"
@@ -85,21 +84,20 @@
         android:id="@+id/button_right"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginBottom="38dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.841"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/number"
+        app:layout_constraintTop_toTopOf="@id/txvMainActivityNumber"
         app:layout_constraintVertical_bias="0.3">
 
         <Button
-            android:id="@+id/restar"
+            android:id="@+id/btnMainActivitySubstract"
             android:layout_width="120dp"
             android:layout_height="60dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="6dp"
             android:textAllCaps="false"
             android:backgroundTint="@color/teal_custom"
             android:text="@string/restar"
@@ -107,10 +105,10 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/zoom2"
+            android:id="@+id/btnMainActivityZoomMinus"
             android:layout_width="120dp"
             android:layout_height="60dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="6dp"
             android:textAllCaps="false"
             android:backgroundTint="@color/teal_custom"
             android:text="@string/zoom"
@@ -118,10 +116,10 @@
             android:textStyle="bold" />
 
         <Button
-            android:id="@+id/reset"
+            android:id="@+id/btnMainActivityReset"
             android:layout_width="120dp"
             android:layout_height="60dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="6dp"
             android:textAllCaps="false"
             android:backgroundTint="@color/teal_custom"
             android:text="@string/reset"
