--- a/app/src/main/res/layout-land/activity_secondary.xml
+++ b/app/src/main/res/layout-land/activity_secondary.xml
@@ -143,4 +143,21 @@
         app:layout_constraintStart_toEndOf="@+id/linearLayout" />
 
 
+    <Button
+        android:id="@+id/btnSecondaryActivityBack"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/teal_custom"
+        android:text="@string/volver"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.92"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.13" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
